--- a/cd/deploy.yaml
+++ b/cd/deploy.yaml
@@ -2,18 +2,13 @@ apiVersion: appconnect.ibm.com/v1beta1
 kind: IntegrationServer
 metadata:
   name: is-toolkit
+  namespace: sample-ace-project
 spec:
   designerFlowsOperationMode: disabled
   license:
     accept: true
     license: L-AMYG-BQ2E4U
     use: CloudPakForIntegrationProduction
-  pod:
-    containers:
-      runtime:
-        image: "__IMAGE__"
-    imagePullSecrets:
-      - name: ibm-cr-pull-secret
   replicas: 1
   router:
     timeout: 120s
@@ -21,3 +16,9 @@ spec:
     endpointType: http
   useCommonServices: true
   version: 11.0.0
+  pod:
+    imagePullSecrets:
+      - name: registry-secret
+    containers:
+      runtime:
+        image: us.icr.io/cp4i-gse-poc/sample-ace-project:1-amd64
